--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,4 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item
+        android:id="@+id/notification"
+        android:title="@string/navigation"
+        android:icon="@drawable/ic_notifications"
+        />
+    <item
+        android:id="@+id/Chats"
+        android:title="chats"
+        android:icon="@drawable/ic_chat"
+        />
+    <item
+        android:id="@+id/Teams"
+        android:title="Teams"
+        android:icon="@drawable/ic_teams"
+        />
+    <item
+        android:id="@+id/Assignment"
+        android:title="Assignment"
+        android:icon="@drawable/ic_assignment"
+        />
+    <item
+        android:id="@+id/Calender"
+        android:title="Calender"
+        android:icon="@drawable/ic_calender"
+        />
 </menu>
