--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,8 @@
         android:layout_alignParentBottom="true"
         android:id="@+id/bottom_nav"
         app:menu="@menu/nav_menu"/>
+    <androidx.viewpager2.widget.ViewPager2
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/viewpager"/>
 </RelativeLayout>
