--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -2,27 +2,27 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/notification"
-        android:title="@string/notification"
+        android:title="notification"
         android:icon="@drawable/ic_notifications"
         />
     <item
         android:id="@+id/Chats"
-        android:title="@string/chats"
+        android:title="chats"
         android:icon="@drawable/ic_chat"
         />
     <item
         android:id="@+id/Teams"
-        android:title="@string/teams"
+        android:title="teams"
         android:icon="@drawable/ic_teams"
         />
     <item
         android:id="@+id/Assignment"
-        android:title="@string/assignment"
+        android:title="assignment"
         android:icon="@drawable/ic_assignment"
         />
     <item
         android:id="@+id/Calender"
-        android:title="@string/calender"
+        android:title="calendar"
         android:icon="@drawable/ic_calender"
         />
 </menu>
