--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content">
 
     <LinearLayout
+        android:id="@+id/tile"
         android:layout_weight="1"
         android:orientation="vertical"
         android:layout_margin="15dp"
