--- a/app/src/main/res/layout/activity_first_team.xml
+++ b/app/src/main/res/layout/activity_first_team.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".FirstTeamActivity">
+    tools:context=".TeamActivity">
 
 
     <com.google.android.material.tabs.TabLayout
