--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#9C27B0"
+        app:tabIndicatorColor="@android:color/black"
         app:tabSelectedTextColor="@android:color/white"
         app:tabTextColor="@android:color/black">
 
@@ -32,7 +33,7 @@
             android:id="@+id/tabAssignments"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Assignments" />
+            android:text="Members" />
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager.widget.ViewPager
