added member files

--- a/app/src/main/res/menu/show_menu.xml
+++ b/app/src/main/res/menu/show_menu.xml
@@ -3,7 +3,7 @@
     <!--we add icons-->
     <item
         android:id="@+id/editText"
-        android:title="Edit Text"
+        android:title="Edit Info"
         android:icon="@drawable/ic_edit"
         />
     <item
