--- a/app/src/main/res/layout/team_item.xml
+++ b/app/src/main/res/layout/team_item.xml
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/mSubTitle"
-            android:text="SubTitle"
+            android:text="About"
             android:textColor="@android:color/darker_gray"
             android:textSize="15sp"
             android:textStyle="bold"
