--- a/app/src/main/res/layout/fragment_posts.xml
+++ b/app/src/main/res/layout/fragment_posts.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.TeamActivityFragments.PostsFragment">
+    tools:context=".fragments.RoomActivityFragments.PostsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <RelativeLayout
