--- a/app/src/main/res/drawable/add_room_textview_background.xml
+++ b/app/src/main/res/drawable/add_room_textview_background.xml
@@ -2,8 +2,8 @@
 <shape
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white"/>
-    <stroke android:color="@color/purple_500" android:width="3dp"/>
-    <corners android:radius="15dp"/>
+    <solid android:color="@color/purple_500"/>
+    <corners android:topLeftRadius="15dp"
+        android:topRightRadius="15dp"/>
 
 </shape>
