changed room navbar color

--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -12,7 +12,7 @@
         android:id="@+id/tablayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#9C27B0"
+        android:background="#6404EC"
         app:tabIndicatorColor="@android:color/black"
         app:tabSelectedTextColor="@android:color/white"
         app:tabTextColor="@android:color/black">
