--- a/app/src/main/res/layout/member_item.xml
+++ b/app/src/main/res/layout/member_item.xml
@@ -1,52 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="8dp"
-    app:cardMaxElevation="5dp"
-    android:layout_margin="10dp"
-    >
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    android:layout_height="?android:attr/listPreferredItemHeightLarge"
+    android:background="@drawable/member_item_border">
 
-        <LinearLayout
-            android:id="@+id/memberTile"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:layout_margin="15dp"
-            android:padding="4dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/memberName"
-                android:text="Name"
-                android:textColor="@color/black"
-                android:textSize="19sp"
-                android:textStyle="bold"
-                android:layout_margin="6dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:id="@+id/memberEmail"
-                android:text="Email"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                android:layout_margin="6dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-        <ImageView
-            android:id="@+id/memberMenus"
-            android:src="@drawable/ic_more"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"/>
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/memImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:contentDescription="Icon" />
 
-</androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/memName"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_toEndOf="@id/memImage"
+        android:layout_toRightOf="@id/memImage"
+        android:gravity="center_vertical"
+        android:textSize="14sp"/>
+    <TextView
+        android:id="@+id/memEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_toEndOf="@id/memImage"
+        android:layout_toRightOf="@id/memImage"
+        android:gravity="center_vertical"
+        android:textSize="14sp"/>
+
+</RelativeLayout>
