--- a/app/src/main/res/layout/member_item.xml
+++ b/app/src/main/res/layout/member_item.xml
@@ -9,7 +9,15 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/memImage"
+            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
+            app:strokeColor="@color/black"
+            app:strokeWidth="1dp"
+            android:layout_height="40dp"
+            android:layout_width="40dp"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"/>
         <LinearLayout
             android:id="@+id/memTile"
             android:layout_weight="1"
@@ -18,22 +26,23 @@
             android:padding="4dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
             <TextView
                 android:id="@+id/memName"
                 android:text="Name"
                 android:textColor="@color/black"
-                android:textSize="19sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                android:layout_margin="6dp"
+                android:layout_margin="1dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
             <TextView
                 android:id="@+id/memEmail"
                 android:text="Email"
                 android:textColor="@android:color/darker_gray"
-                android:textSize="15sp"
+                android:textSize="14sp"
                 android:textStyle="bold"
-                android:layout_margin="6dp"
+                android:layout_margin="1dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
