added profile icon

--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -22,7 +22,7 @@
         />
     <item
         android:id="@+id/Calender"
-        android:title="@string/calendar"
-        android:icon="@drawable/ic_calender"
+        android:title="@string/profile"
+        android:icon="@drawable/ic_profile"
         />
 </menu>
