--- a/app/src/main/res/layout/activity_dialog_main_gg.xml
+++ b/app/src/main/res/layout/activity_dialog_main_gg.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app ="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".chat.ActivityMainDialog">
+
     <com.example.connect.chat.dialogs.DialogsList
         android:id="@+id/dialogsList"
         android:layout_width="match_parent"
@@ -14,4 +15,5 @@
         app:dialogUnreadBubbleBackgroundColor="@color/purple_700"
         app:dialogUnreadItemBackground="@color/gray_dark_transparent"
         app:dialogUnreadBubbleTextStyle="bold"/>
-</FrameLayout>
+
+</RelativeLayout>
